# x-alpaca-trading-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  X_ALPACA_OPTIONS_HANDOFF.md  pyproject.toml  x-alpaca-trading-bot-architecture.md
api/: __init__.py  main.py  ws_manager.py
api/routers/: __init__.py  config.py  debug.py  market.py  performance.py  positions.py  signals.py  (+1 more)
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
deploy/: SETUP.md  install.sh  postgres_setup.sql  x-alpaca-bot.service
research/: README.md  analyze_closed_trades.py  backtest_failed_breakout.py  backtest_momentum.py
scripts/: backfill_swks_manual_close.py  backtest_failed_breakout.py  backtest_momentum.py  backtest_signals.py  executor_manual_smoke.py  inject_test_signal.py
tests/: test_alerts.py  test_api.py  test_backtest_failed_breakout.py  test_backtest_momentum.py  test_backtest_signals.py  test_config.py  test_config_router.py  test_config_store.py  test_data_service_integration.py  test_data_service_quotes.py  test_executor.py  test_executor_integration.py  test_greeks.py  test_journal.py  test_orchestrator.py  test_parser.py  test_risk_manager.py  test_risk_manager_integration.py  test_snapshot.py  test_snapshot_integration.py  test_strategy.py  test_validator.py  test_ws_manager.py  test_x_stream.py
x_alpaca_trading_bot/: __init__.py  alerts.py  config.py  config_store.py  data_service.py  db.py  executor.py  greeks.py  journal.py  main.py  parser.py  risk_manager.py  snapshot.py  strategy.py  validator.py  x_stream.py
(+29 files in other folders)
