[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-alpaca-trading-bot"
version = "0.1.0"
description = "Options trading bot: X signal → Claude parse → Alpaca paper execution with trailing-stop position management."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Quin Robinson" }]
license = { text = "Proprietary" }

dependencies = [
    "alpaca-py>=0.30",
    "tweepy>=4.14",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "httpx>=0.27",
    "pandas>=2.2",
    "pandas-ta-classic>=0.4",  # Phase 3 indicator math (maintained pandas-ta fork)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
x-alpaca-bot = "x_alpaca_trading_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["x_alpaca_trading_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
